--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ authors = [
 ]
 dependencies = [
     "django>=4.2.4",
+    "djangorestframework>=3.14.0",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
