--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,14 @@ authors = [
 dependencies = [
     "django>=4.2.4",
     "djangorestframework>=3.14.0",
+    "django-extensions>=3.2.3",
+    "pydotplus>=2.0.2",
+    "django-cors-headers>=4.2.0",
+    "drf-spectacular>=0.26.5",
+    "django-filter>=23.3",
+    "djangorestframework-simplejwt>=5.3.0",
+    "python-magic>=0.4.27",
+    "Pillow>=10.0.1",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
