--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "djangorestframework-simplejwt>=5.3.0",
     "python-magic>=0.4.27",
     "Pillow>=10.0.1",
+    "setuptools>=68.2.2",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
