--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ pytz==2023.3
 PyYAML==6.0.1
 referencing==0.30.2
 rpds-py==0.10.3
+setuptools==68.2.2
 sqlparse==0.4.4
 typing-extensions==4.7.1
 uritemplate==4.1.1
