--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "python-magic>=0.4.27",
     "Pillow>=10.0.1",
     "setuptools>=68.2.2",
+    "python-dotenv>=1.0.0",
+    "netifaces>=0.11.0",
 ]
 requires-python = ">=3.10"
 readme = "README.md"
@@ -46,3 +48,11 @@ without-hashes = "true"
 filename = "requirements.txt"
 without-hashes = "true"
 
+
+[[tool.pdm.autoexport]]
+filename = "requirements.txt"
+without-hashes = "true"
+
+[tool.pdm.scripts]
+pre_dev = "python ./scripts/set_my_ip.py"
+dev = "python manage.py runserver 0.0.0.0:19003"
