--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Pillow==10.0.1
 pydotplus==2.0.2
 pyjwt==2.8.0
 pyparsing==3.1.1
+python-dotenv==1.0.0
 python-magic==0.4.27
 pytz==2023.3
 PyYAML==6.0.1
