--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,12 @@ django-filter==23.3
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-spectacular==0.26.5
+gunicorn==21.2.0
 inflection==0.5.1
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
+netifaces==0.11.0
+packaging==23.1
 Pillow==10.0.1
 pydotplus==2.0.2
 pyjwt==2.8.0
